# arp

./: .eslintrc.cjs  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: phase-1-initial-release.md  phase-2-runtime-core.md  phase-3-sidecar.md  phase-5-testkit.md
demos/: cross-connection-isolation.sh  pair-samantha-ghost.sh  revoke-and-verify.sh
docs/: ARP-KyberBot-unification-roadmap.md  ARP-adapter-authoring-guide.md  ARP-adapter-skill.md  ARP-architecture.md  ARP-atlas-cloud-quickstart.md  ARP-atlas-integration-example.md  ARP-design-system.md  ARP-example-atlas-cloud.md  ARP-example-atlas-kyberbot.md  ARP-example-atlas-vps.md  ARP-getting-started.md  ARP-headless-card-bridging.md  ARP-headless-integration-prompt.md  ARP-headless-parallel-build.md  ARP-hns-resolution.md  ARP-installation-and-hosting.md  ARP-mental-model.md  ARP-our-codebase.md  ARP-phase-0-roadmap.md  ARP-phase-1-shared-contract.md  ARP-phase-10-gap-audit.md  ARP-phase-10-product-completion.md  ARP-phase-10-samantha-agent-validation.md  ARP-phase-10-slice-10a-manual-smoke.md  ARP-phase-10-slice-10a-pairing-shape-audit.md  ARP-phase-10-slice-10d-manual-smoke.md  ARP-phase-10-slice-10d-owner-app-webauthn-vps.md  ARP-phase-2-runtime-core.md  ARP-phase-3-sidecar.md  ARP-phase-4-pairing-owner-app.md  ARP-phase-5-reference-agents-testkit.md  (+18 more)
python/arp-sdk/: .gitignore  README.md  pyproject.toml
python/arp-sdk/arp_sdk/: __init__.py  agent.py  guard.py  obligations.py  types.py
python/arp-sdk/tests/: test_agent.py
(+514 files in other folders)
